@@ -1,3 +1,10 @@
+2005-11-18  Christian Persch  <chpe@cvs.gnome.org>
+
+	* src/ephy-tab.c:
+
+	Delay reloads when we get many change notifications in a short time.
+	Fixes bug #319993.
+
 2005-11-17  Christian Persch  <chpe@cvs.gnome.org>
 
 	* src/ephy-window.c:
